2002-09-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/new-accidental-engraver.cc: Compile fix.

2002-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/convert-ly.py: Add rule.

	* input/test/music-creation.ly:
	* input/test/add-staccato.ly:
	* input/test/add-text-script.ly: ly-make-music.

	* scm/drums.scm (make-head-type-elem, make-articulation-script):
	More ly-make-music renamings.

	* lily/command-request.cc: ADD_MUSIC: arpeggio_req.

	* lily/music-constructor.cc (make_music): Add debugging info.

	* scm/music-functions.scm (make-simultaneous-music,
	(make-sequential-music, context-spec-music):
	* scm/music-types.scm (music-descriptions): Get lily to run.

2002-09-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/command-request.cc (transpose_key_alist): new function.

	* lily/key-performer.cc (create_audio_elements): cleanup. 

2002-09-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy: remove TYPED_MAKE_MUSIC().

	* lily/include/translator.hh (ENTER_DESCRIPTION): add
	events-accepted field.

	* scm/music-types.scm: new file.

	* lily/parser.yy: put music type initialization into scheme,
	similar to grob initialization.  Changes throughout.

2002-09-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely: Fix links.
	
	* Documentation/index.texi: 
	* Documentation/header.html.in: 
	* Documentation/topdocs/index.tely: Small website fixes and updates.

	* debian/: Debian patch by Anthony Fok.

2002-09-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/footer.html.in: How time flies: It's already 2002!

	* Documentation/topdocs/index.tely: Stable/development fix.  Use
	more descriptive link names than 'here'.

	* ROADMAP: Remove test stuff.

	* scripts/update-lily.py: Allow auto-building of stable and
	development versions.  Bugfixes.

2002-09-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/tex.scm (header-end): enclose lily output in begingroup/endgroup.
